lib/stratiform/res/test/stratiform/tel/neg/e114-duplicate-literal.tel
code
      EOF
first
EOF
      END
second
END
